--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
                 <a data-toggle="modal" data-target="#modalRegister" class="navbar-brand tilt tiltingParent" href="#"><img class="tiltingChildrens" height="100" width="100" src="assets/img/logo.png"></a>
-                <button data-toggle="modal" data-target="#modalRegister" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <button data-toggle="modal" data-target="#modalRegister" class="navbar-toggler mobile-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Contact</button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link contact-click" href="#">Contact</a></li>
@@ -320,6 +320,9 @@
         <script type="text/javascript">
             $(document).ready(function() {
                 imagSixModal
+                $(".mobile-auto").click(function() {
+                  $('#exampleModalCenterContact').modal('show');
+                })
                 $("#exampleModalCenter").modal();
 
                 $(".imagSixModal").click(function() {
