--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="container px-5">
                 <a data-toggle="modal" data-target="#modalRegister" class="navbar-brand tilt tiltingParent" href="#"><img class="tiltingChildrens" height="100" width="100" src="assets/img/logo.png"></a>
                 <button data-toggle="modal" data-target="#modalRegister" class="navbar-toggler mobile-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Contact</button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <div class="collapse navbar-collapse" id="">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link contact-click" href="#">Contact</a></li>
                     </ul>
